[package]
name = "xpans_projectfile"
version = "0.1.0"
edition = "2024"
description = "A data format combining necessary information to load audio and spatial data of scenes in the xpans Ecosystem"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xpans-audio/xpans_projectfile.git"
authors = ["Ben Seigler"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
